refactored components, classes

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -3,4 +3,10 @@
   width: 30%;
   margin-bottom: 2px;
   margin-right: 2px;
+
+  // &__items {
+  //   border: 1px solid orangered; // to be deleted
+  //   margin: 2px;
+  // }
 }
+
