--- a/src/styles/cards_group.scss
+++ b/src/styles/cards_group.scss
@@ -1,6 +1,8 @@
 .cards {
+  min-width: 15rem;
   border: 1px solid green; // to be deleted
-  width: 75%;
+  background-color: #eaeaea;
+  width: 98%;
   margin: 0 auto;
 
   &__group {
@@ -14,6 +16,8 @@
   
   &__toggle {
     border: 1px solid green; // to be deleted
-    padding-left: 5rem;
+    padding: 1rem 0 1rem 1.5rem;
+    background-color: #eaeaea;
+    outline: none;
   }
 }
