some styles, custom colors, grid/list toggle applied

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,26 +1,32 @@
 .card {
-  border: 1px solid blue;
+  border-left: 1px solid #fff;
   min-width: 10rem;
-  margin-bottom: 2px;
-  margin-right: 2px;
-  color: green; }
+  margin-bottom: 4px;
+  margin-right: 4px;
+  color: green;
+  background-color: #fff;
+  font-size: .8rem;
+  font-family: sans-serif;
+  color: #474747; }
   .card__items {
-    border: 1px solid orangered;
     margin: 2px; }
 
 .card-grid-view {
   width: 32%; }
 
 .card-list-view {
-  width: 100%; }
+  width: 98%; }
 
 .card-abstract {
-  border: 1px solid yellowgreen;
-  white-space: wrap;
   overflow: hidden;
-  display: inline-block;
-  text-overflow: ellipsis; }
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  height: 3.5rem; }
 
-.card-abstract:after {
-  top: -50px;
-  left: -50px; }
+.dot {
+  height: .6rem;
+  width: .6rem;
+  border-radius: 50%;
+  background-color: lightgray; }
