--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,18 +1,62 @@
 .card {
   border-left: 1px solid #fff;
   min-width: 10rem;
-  margin-bottom: 4px;
-  margin-right: 4px;
+  margin-bottom: .5rem;
+  margin-right: .5rem;
   color: green;
   background-color: #fff;
   font-size: .8rem;
   font-family: sans-serif;
   color: #474747;
-
-  &__items {
-    //border: 1px solid orangered; // to be deleted
-    margin: 2px;
+  
+  &__dot {
+    margin: .6rem .8rem;
+    height: .6rem;
+    width: .6rem;
+    border-radius: 50%;
+    background-color: lightgray;
   }
+
+  &__item {
+    margin: .25rem 0;
+    padding-left: .5rem;
+  }
+
+  &__title {
+    font-size: 1rem;
+    line-height: 1.4rem;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: #41bef4;
+    font-size: .75rem;
+  }
+
+  &__abstract {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    height: 3.5rem; 
+  }
+}
+
+.td-wrapper {
+  display: flex;
+  
+  &__type {}
+  &__date {}
+}  
+
+.vd-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 1rem;
+
+  &__views {}
+  &__download {}
 }
 
 .card-grid-view {
@@ -23,18 +67,17 @@
   width: 98%;
 }
 
-.card-abstract {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  text-overflow: ellipsis;
-  height: 3.5rem; 
+.foo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 1rem;
 }
 
-.dot {
-  height: .6rem;
-  width: .6rem;
-  border-radius: 50%;
-  background-color: lightgray;
+.baz {
+  display: flex;
+}
+
+.read {
+  align-self: center;
 }
