--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -25,12 +25,9 @@
     color: #41bef4;
     font-size: .75rem; }
   .card__abstract {
+    height: 3.3rem;
     overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-    height: 3.5rem; }
+    padding: 0 1rem 0 .5rem; }
 
 .td-wrapper {
   display: flex; }
